book/tests/snapshots/snapshot__@queries__syntax-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\n# Requires parentheses, because it's contains a pipe\nderive is_proximate = (distance | in 0..20)\n# Requires parentheses, because it's a function call\nderive total_distance = (sum distance)\n# `??` doesn't require parentheses, as it's not a function call\nderive min_capped_distance = (min distance ?? 5)\n# No parentheses needed, because no function call\nderive travel_time = distance / 40\nderive [\n  # Requires parentheses, because it contains a pipe\n  is_far = (distance | in 100..),\n  # The left value of the range requires parentheses,\n  # because of the minus sign\n  is_negative = (distance | in (-100..0)),\n  # This is fine too\n  is_negative = (distance | in (-100)..0),\n  # Doesn't require parentheses, because it's in a list (*confusing)!\n  average_distance = average distance,\n]\n# Requires parentheses because of the minus sign\nsort (-distance)\n# A list is fine too\nsort [-distance]\n"
input_file: book/tests/prql/queries/syntax-5.prql
---
from employees
# Requires parentheses, because it's contains a pipe
derive is_proximate = (distance | in 0..20)
# Requires parentheses, because it's a function call
derive total_distance = (sum distance)
# `??` doesn't require parentheses, as it's not a function call
derive min_capped_distance = (min distance ?? 5)
# No parentheses needed, because no function call
derive travel_time = distance / 40
derive [
  # Requires parentheses, because it contains a pipe
  is_far = (distance | in 100..),
  # The left value of the range requires parentheses,
  # because of the minus sign
  is_negative = (distance | in (-100..0)),
  # This is fine too
  is_negative = (distance | in (-100)..0),
  # Doesn't require parentheses, because it's in a list (*confusing)!
  average_distance = average distance,
]
# Requires parentheses because of the minus sign
sort (-distance)
# A list is fine too
sort [-distance]


Error:
    ╭─[:17:32]
    │
 17 │   is_negative = (distance | in (-100)..0),
    ·                                ───┬──
    ·                                   ╰──── std.in expected a pattern, but found -100
────╯

